--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "name": "netflix-clone",
+  "homepage": "https://sameerkumqrtt.github.io/Netflix_clone",
+  "version": "0.1.0"
 }
